<resources>
    <string name="app_name">GymHelp</string>

    <string name="weight_updated">Weight Updated: </string>
    <string name="increase_weight">Increase Weight!</string>

    <string name="no_photo_selected">No photo selected</string>
    <string name="photo_selected">Uncheck to remove photo</string>

    <string name="target_chest">Chest</string>
    <string name="target_back">Back</string>
    <string name="target_arms">Arms</string>
    <string name="target_shoulders">Shoulders</string>
    <string name="target_legs">Legs</string>
    <string name="target_abs">Abs</string>
    <string name="target_compound">Compound</string>

    <string name="menu_read_full">Read Full</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_weight_flag">Set/Unset Weight Flag</string>

    <string name="search_hint">Search Exercises</string>
    <string name="add_exercise">Add Exercise</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="new_program_prompt">Provide name for new Program:</string>
    <string name="add_new_program_label">Add new Program</string>
    <string name="sort_ascending_title">Sort A to Z</string>
    <string name="sort_descending_title">Sort Z to A</string>
    <string name="sort_unsorted_title">Unsorted</string>
</resources>
