<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/app_name"
        android:hint="@string/search_hint"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <group android:checkableBehavior="single"
        android:id="@+id/sort_items_group">
        <item
            android:id="@+id/sort_ascending"
            android:title="@string/sort_ascending_title"/>
        <item
            android:id="@+id/sort_descending"
            android:title="@string/sort_descending_title"/>
        <item
            android:id="@+id/unsorted"
            android:title="@string/sort_unsorted_title"
            android:checked="true"/>
    </group>
</menu>